# MOD12-Research-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  create_graphs_filenames.json  file_paths.json  pyproject.toml
.github/workflows/: test.yml
research_project/: extract_demos.py
research_project/graphs/00e7fec9-cee0-430f-80f4-6b50443ceacd/: graph-rounds-0.pkl  graph-rounds-1.pkl  graph-rounds-10.pkl  graph-rounds-11.pkl  graph-rounds-12.pkl  graph-rounds-13.pkl  graph-rounds-14.pkl  graph-rounds-15.pkl  graph-rounds-16.pkl  graph-rounds-17.pkl  graph-rounds-18.pkl  graph-rounds-19.pkl  graph-rounds-2.pkl  graph-rounds-20.pkl  graph-rounds-21.pkl  graph-rounds-22.pkl  graph-rounds-23.pkl  graph-rounds-24.pkl  graph-rounds-25.pkl  graph-rounds-26.pkl  graph-rounds-27.pkl  graph-rounds-3.pkl  graph-rounds-4.pkl  graph-rounds-5.pkl  graph-rounds-6.pkl  graph-rounds-7.pkl  graph-rounds-8.pkl  graph-rounds-9.pkl
research_project/graphs/47fd068a-cb07-471d-a68d-e0ef52b70f91/: graph-rounds-0.pkl  graph-rounds-1.pkl  graph-rounds-10.pkl  graph-rounds-11.pkl  graph-rounds-12.pkl  graph-rounds-13.pkl  graph-rounds-14.pkl  graph-rounds-15.pkl  graph-rounds-16.pkl  graph-rounds-17.pkl  graph-rounds-18.pkl  graph-rounds-19.pkl  graph-rounds-2.pkl  graph-rounds-20.pkl  graph-rounds-21.pkl  graph-rounds-22.pkl  graph-rounds-23.pkl  graph-rounds-24.pkl  graph-rounds-25.pkl  graph-rounds-3.pkl  graph-rounds-4.pkl  graph-rounds-5.pkl  graph-rounds-6.pkl  graph-rounds-7.pkl  graph-rounds-8.pkl  graph-rounds-9.pkl
research_project/src/: create_graphs.py  gnn.py  load_graphs.py
research_project/src/models/: data_manager.py  visualization_manager.py
research_project/src/tk_components/: components.py
research_project/src/utils/: directory_files.py  discord_webhook.py  download_demo_from_repo.py  filter_weapons.py
research_project/tactic_labels/: de_dust2_tactics.json
research_project/tactic_labels/de_dust2/: 00e7fec9-cee0-430f-80f4-6b50443ceacd.json  None.json
research_project/tactic_labels/de_dust2/00e7fec9-cee0-430f-80f4-6b50443ceacd/: 00e7fec9-cee0-430f-80f4-6b50443ceacd_8.json
tests/: test_helloworld.py
