[tool.poetry]
name = "research-project"
version = "0.1.0"
description = ""
authors = ["Povilas Kirna <povilas.kirna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
torch = "^2.7.0"
torch-geometric = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.10"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.extend-select = ["E", "F", "I"]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
