[tool.poetry]
name = "research-project"
version = "0.1.0"
description = ""
authors = ["Povilas Kirna <povilas.kirna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
scipy = { version = "1.10.1", markers = "python_version > '3.11' and python_version < '3.12'" }
python = ">=3.11.8,<=3.11.12"
babel = "2.17.0"
imageio = "2.28.1"
jinja2 = "3.1.6"
matplotlib = "3.7.5"
networkx = "3.4.2"
numpy = "1.25.0"
pandas = "2.0.3"
pillow = "11.2.1"
pydantic = "2.0.3"
shapely = "2.0.7"
extensions = "0.4"
tqdm = "4.65.2"
sympy = "1.11"
torch = "2.1.2"
torch-geometric = "2.6.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiosignal = "1.3.2"
alabaster = "0.7.16"
annotated-types = "0.7.0"
attrs = "25.3.0"
awpy = "1.3.1"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
contourpy = "1.3.2"
cycler = "0.12.1"
docutils = "0.18.1"
filelock = "3.18.0"
fonttools = "4.58.0"
frozenlist = "1.6.0"
fsspec = "2025.3.2"
idna = "3.10"
imagesize = "1.4.1"
kiwisolver = "1.4.8"
markupsafe = "3.0.2"
mpmath = "1.3.0"
multidict = "6.4.3"
packaging = "25.0"
propcache = "0.3.1"
psutil = "7.0.0"
pydantic-core = "2.3.0"
pygments = "2.19.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
requests = "2.32.3"
six = "1.17.0"
snowballstemmer = "3.0.1"
sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.0"
sphinxcontrib-applehelp = "2.0.0"
sphinxcontrib-devhelp = "2.0.0"
sphinxcontrib-htmlhelp = "2.1.0"
sphinxcontrib-jquery = "4.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "2.0.0"
sphinxcontrib-serializinghtml = "2.0.0"
textdistance = "4.5.0"
typing-extensions = "4.7.1"
tzdata = "2025.2"
urllib3 = "2.4.0"
yarl = "1.20.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.10"
pytest = "^8.3.5"


[tool.poetry.group.discord-webhook.dependencies]
discord-py = "^2.5.2"
asyncio = "^3.4.3"
aiohttp = "^3.11.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.extend-select = ["E", "F", "I"]
lint.ignore = ["E501", "E711"]

[tool.ruff.format]
quote-style = "double"
